# FolderGrovePy

./: .gitignore  README.md  pyproject.toml
folder grove/: main.py  style.py
folder grove/config/: config.json  presets.txt
folder grove/functions/: subfolder.py
folder_grove/: main.py  style.py
folder_grove/config/: presets.txt  template.txt
folder_grove/functions/: others.py  subfolder.py
