[tool.poetry]
name = "folder grove"
version = "0.1.0"
description = ""
authors = ["Purgemebaby <purgemycode@gmail.com>", "D4nivi <danielvidalfajardo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
questionary = "^2.0.1"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
